--- a/src/cmp/Header/Header.css
+++ b/src/cmp/Header/Header.css
@@ -10,13 +10,14 @@
     left: 0;
     padding: 2px 0;
     margin-bottom: 20px;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1.5px solid #ddd;
+    z-index: 1;
 }
 
 .header-left{
     display: flex;
     align-items: center;
-    padding-left: 15%;
+    padding-left: 10%;
 }
 
 .header-left img{
@@ -48,7 +49,7 @@
 .header-right{
     display: flex;
     align-items: center;
-    padding-right: 15%;
+    padding-right: 10%;
 }
 
 .header-right .options{
