--- a/src/cmp/Sidebar/Sidebar.css
+++ b/src/cmp/Sidebar/Sidebar.css
@@ -39,10 +39,13 @@
 
 .sidebarProfile-intro h4{
     margin: 0;
+    font-weight: 600;
+    padding: 0px 10px;
 }
 
 .sidebarProfile-intro span{
     font-size: 13px;
+    padding: 0px 10px;
 }
 
 .sidebarProfile-details{
@@ -78,6 +81,7 @@
     font-size: 13px;
     margin: 0;
     margin-bottom: 5px;
+    font-weight: 600;
 }
 
 .sidebarRecent-options{
